--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 2.3.2+12
+version: 3.0.0+18
 
 environment:
   sdk: ^3.10.7
@@ -59,6 +59,10 @@ dependencies:
   permission_handler: ^11.3.1
   path_provider: ^2.1.2
   supabase_flutter: ^2.12.0
+  package_info_plus: any
+  dio: any
+  device_info_plus: any
+  open_filex: any
 
 dev_dependencies:
   flutter_test:
