--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 3.0.0+18
+version: 4.0.0+19
 
 environment:
   sdk: ^3.10.7
@@ -63,6 +63,8 @@ dependencies:
   dio: any
   device_info_plus: any
   open_filex: any
+  lucide_icons: ^0.257.0
+  share_plus: ^7.2.2
 
 dev_dependencies:
   flutter_test:
