--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -39,6 +39,9 @@ jobs:
             cp lib/core/config/env.example.dart lib/core/config/env.dart
           fi
 
+      - name: Decode Google Services JSON
+        run: echo "${{ secrets.GOOGLE_SERVICES_JSON }}" > android/app/google-services.json
+
       - name: Build APK
         run: flutter build apk --release
 
